force-app/main/default/objects/trailheadapp__Debug_Log__c/trailheadapp__Debug_Log__c.object-meta.xml
<CustomObject>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>TDL-{0000}</displayFormat>
        <label>Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>