force-app/main/default/objects/trailheadapp__Debug_Log__c/fields/trailheadapp__Message__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Message__c</fullName>
    <description>The details or message for debug log.</description>
    <label>Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>