force-app/main/default/objects/trailheadapp__Debug_Log__c/fields/trailheadapp__Severity__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Severity__c</fullName>
    <label>Severity</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>