force-app/main/default/objects/trailheadapp__Debug_Log__c/fields/trailheadapp__Transaction__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Transaction__c</fullName>
    <description>The unique transaction number for reporting.</description>
    <label>Transaction</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>